k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: helloworld
