k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloworld-1
    kubernetes.io/ingress.class: "gce"
    #ingress.gcp.kubernetes.io/pre-shared-cert: "deployly"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: helloworld-service
          servicePort: 80
